[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Grych <grych@tg.pl>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
log = "0.4.14"

